addons/rollout/fluxcd/manifests/ingress-nginx/rollout-ingress-nginx.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollout-nginx-cluster-local
  namespace: rollout
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: k2s.cluster.local
      http:
        paths:
          - backend:
              service:
                name: weave-gitops
                port:
                  number: 9001
            path: /rollout
            pathType: Prefix
